goapp/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopsproj
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: devopsproj.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devopsproj
            port:
              number: 80
